--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
   
    <div class="footer-text">
      <p>&copy; ING. MARTÍN CAMPUZANO ALONSO | AUTOR</p>
+     <p>&copy; CONTACTO: 0994901856</p> 
    </div>
   
   </div>
