--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
      <div class="box-testimonio">
       <div class="card-testimonio">
-        <div class="card-img"><img src="img/vivi.jpg" alt=""></div>
+        <div class="card-img"><img src="img/Tox.jpg" alt=""></div>
         <div class="testimonio-text">
         <h4>Belén Alonso</h4>
         <p>"Te agradezco por el buen trabajo, eficaz y confiable, que el éxito siga y así también recomendar tu trabajo a todos."</p>
@@ -111,7 +111,7 @@
       </div>
 
       <div class="card-testimonio">
-          <div class="card-img"><img src="img/legui.jpg" alt=""></div>
+          <div class="card-img"><img src="img/Perfil.jpg" alt=""></div>
           <div class="testimonio-text">
           <h4>Miguel Leguizamón</h4>
           <p>"Quedó super bien mi notebook, ahora está más rápido y no se traba. Además trabajas bien y no cobras caro, seguí así crack y que sigan los éxitos."</p>
