--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
     <section class="acerca-de">
     <div class="info-container">
       <h1>ACERCA DE MARTEC</h1>
-      <p>VISION: SER UNA EMPRESA LIDER EN SERVICIOS INFORMÁTICOS Y TECNOLÓGICOS, RECONOCIDA A NIVEL NACIONAL POR SU CALIDAD E INNOVACIÓN PERMANENTE. <br>
-      MISION: OFRECER SERVICIOS INFORMÁTICOS Y TECNOLÓGICOS COMPETITIVOS, CON SÓLIDOS VALORES, COMPROMETIDOS AL MERCADO LABORAL, CAPACITADOS Y POR SOBRE TODO BRINDAR UN SERVICIO DE CALIDAD HACIA NUESTROS CLIENTES.</p>
+        <p>VISION</p>
+       <p>SER UNA EMPRESA LIDER EN SERVICIOS INFORMÁTICOS Y TECNOLÓGICOS, RECONOCIDA A NIVEL NACIONAL POR SU CALIDAD E INNOVACIÓN PERMANENTE.</p>  <br>
+    <p>MISION: 
+      <p> OFRECER SERVICIOS INFORMÁTICOS Y TECNOLÓGICOS COMPETITIVOS, CON SÓLIDOS VALORES, COMPROMETIDOS AL MERCADO LABORAL, CAPACITADOS Y POR SOBRE TODO BRINDAR UN SERVICIO DE CALIDAD HACIA NUESTROS CLIENTES.</p>
       <div class="about-gallery">
         <img src="img/ofi.png" alt="">
         <img src="img/PC1.png" alt="">
