--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <section class="acerca-de">
     <div class="info-container">
       <h1>ACERCA DE MARTEC</h1>
-        <p>VISION</p>
+       <h3> VISION</h3>
        <p>SER UNA EMPRESA LIDER EN SERVICIOS INFORMÁTICOS Y TECNOLÓGICOS, RECONOCIDA A NIVEL NACIONAL POR SU CALIDAD E INNOVACIÓN PERMANENTE.</p>  <br>
-    <p>MISION: 
+       <h3> MISION </h3>
       <p> OFRECER SERVICIOS INFORMÁTICOS Y TECNOLÓGICOS COMPETITIVOS, CON SÓLIDOS VALORES, COMPROMETIDOS AL MERCADO LABORAL, CAPACITADOS Y POR SOBRE TODO BRINDAR UN SERVICIO DE CALIDAD HACIA NUESTROS CLIENTES.</p>
       <div class="about-gallery">
         <img src="img/ofi.png" alt="">
