--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Imagen Header -->
     <div class="img-header">
      <div class="welcome">
-       <h1>Bienvenidos MARTEC - Servicios Informáticos</h1>
+       <h1>Bienvenido a MARTEC - Servicios Informáticos</h1>
        <hr>
        <p>Empresa de Informática</p>
        <button id="abajo">Bajar</button>
